Fix T42264: Negative scale & clipped-select fails

Thanks to mont29 for finding the cause.